--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ main {
     flex-shrink: 0;
 }
 
+.video-player {
+    max-width: 100%;
+    display: none;
+}
+
 canvas {
     border: 3px solid #34495e;
     border-radius: 10px;
@@ -208,7 +213,6 @@ span {
     }
     
     canvas {
-        width: 100%;
         max-width: 400px;
     }
     
@@ -252,8 +256,6 @@ span {
     }
     
     canvas {
-        width: 100%;
-        max-width: 300px;
     }
     
     .control-group {
